// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TopAppBar playground 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-1>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-5 path {
  fill: #e7eefe;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-7 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-9 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  position: relative;
  display: inline-block;
}

.emotion-11 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: black;
  background-color: #fefefe;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-11:hover:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-11:active:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-11:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-14 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #e7ebf2;
  box-sizing: border-box;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-14 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-15 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-16 {
  font-weight: 500;
}

.emotion-19 {
  fill: black;
  width: 1rem;
  height: 1rem;
}

.emotion-19 path {
  fill: black;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      aria-label="Top Application Banner"
      className="emotion-1"
      role="banner"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
          data-testid="menu-handler"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <span
              className="emotion-5"
            />
          </span>
        </div>
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <strong>
              LOGO
            </strong>
            PLACEHOLDER
          </div>
        </div>
      </div>
      <div
        className="emotion-8"
      />
      <div
        className="emotion-9"
      >
        <div
          role="button"
        >
          <div
            className="emotion-10"
            data-testid="userMenu"
          >
            <button
              className="emotion-11"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-12"
              >
                <span
                  className="emotion-13"
                >
                  <div
                    className="emotion-14"
                  >
                    <img
                      src="https://mui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  className="emotion-15"
                >
                  <span>
                    <span
                      className="emotion-16"
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-13"
                >
                  <span
                    className="emotion-4"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-19"
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopAppBar with Additional Tools 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-1>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-5 path {
  fill: #e7eefe;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-7 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-10 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 0.125rem solid transparent;
}

.emotion-10:hover {
  background-color: #f3f5f8!important;
  border-color: false;
  box-shadow: false;
}

.emotion-10:focus-within {
  border-color: #cfd7e5;
  background-color: white;
}

.emotion-11 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 12px 1rem;
}

.emotion-11>div {
  position: relative;
}

.emotion-12 {
  width: 100%;
}

.emotion-13 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 0.875rem;
  text-overflow: ellipsis;
}

.emotion-13+label {
  font-size: 0.875rem;
}

.emotion-13:focus {
  color: #0f0f17;
  outline: none;
}

.emotion-13::-webkit-input-placeholder {
  color: transparent;
}

.emotion-13::-moz-placeholder {
  color: transparent;
}

.emotion-13:-ms-input-placeholder {
  color: transparent;
}

.emotion-13::placeholder {
  color: transparent;
}

.emotion-13:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-13:focus+label,
.emotion-13:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-13:disabled {
  cursor: not-allowed;
}

.emotion-24 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-25 {
  position: relative;
  display: inline-block;
}

.emotion-26 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: black;
  background-color: #fefefe;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-26:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-26:hover:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-26:active:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-26:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-26:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-28 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-29 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #e7ebf2;
  box-sizing: border-box;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-29 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-30 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-31 {
  font-weight: 500;
}

.emotion-34 {
  fill: black;
  width: 1rem;
  height: 1rem;
}

.emotion-34 path {
  fill: black;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      aria-label="Top Application Banner"
      className="emotion-1"
      role="banner"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
          data-testid="menu-handler"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <span
              className="emotion-5"
            />
          </span>
        </div>
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <strong>
              LOGO
            </strong>
            PLACEHOLDER
          </div>
        </div>
      </div>
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-10"
          >
            <div
              className="emotion-11"
            >
              <div
                className="emotion-12"
              >
                <input
                  className="emotion-13"
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="emotion-9"
        >
          <div
            className="emotion-10"
          >
            <div
              className="emotion-11"
            >
              <div
                className="emotion-12"
              >
                <input
                  className="emotion-13"
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="emotion-9"
        >
          <div
            className="emotion-10"
          >
            <div
              className="emotion-11"
            >
              <div
                className="emotion-12"
              >
                <input
                  className="emotion-13"
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="emotion-24"
      >
        <div
          role="button"
        >
          <div
            className="emotion-25"
            data-testid="userMenu"
          >
            <button
              className="emotion-26"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-27"
              >
                <span
                  className="emotion-28"
                >
                  <div
                    className="emotion-29"
                  >
                    <img
                      src="https://mui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  className="emotion-30"
                >
                  <span>
                    <span
                      className="emotion-31"
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-28"
                >
                  <span
                    className="emotion-4"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-34"
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopAppBar with Dark theme enabled 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: black;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-1>*:not(:last-of-type) {
  color: white;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-5 path {
  fill: #e7eefe;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-7 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-9 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  position: relative;
  display: inline-block;
}

.emotion-11 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #030303;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-11:hover:not(:disabled) {
  background-color: #020202;
}

.emotion-11:active:not(:disabled) {
  background-color: #020202;
}

.emotion-11:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-14 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #e7ebf2;
  box-sizing: border-box;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-14 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-15 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-16 {
  font-weight: 500;
}

.emotion-19 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-19 path {
  fill: white;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      aria-label="Top Application Banner"
      className="emotion-1"
      role="banner"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
          data-testid="menu-handler"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <span
              className="emotion-5"
            />
          </span>
        </div>
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <strong>
              LOGO
            </strong>
            PLACEHOLDER
          </div>
        </div>
      </div>
      <div
        className="emotion-8"
      />
      <div
        className="emotion-9"
      >
        <div
          role="button"
        >
          <div
            className="emotion-10"
            data-testid="userMenu"
          >
            <button
              className="emotion-11"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-12"
              >
                <span
                  className="emotion-13"
                >
                  <div
                    className="emotion-14"
                  >
                    <img
                      src="https://mui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  className="emotion-15"
                >
                  <span>
                    <span
                      className="emotion-16"
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-13"
                >
                  <span
                    className="emotion-4"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-19"
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopAppBar with Logo Placeholder 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-1>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-5 path {
  fill: #e7eefe;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-7 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-9 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-10 {
  position: relative;
  display: inline-block;
}

.emotion-11 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: black;
  background-color: #fefefe;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-11:hover:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-11:active:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-11:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-14 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #e7ebf2;
  box-sizing: border-box;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-14 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-15 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-16 {
  font-weight: 500;
}

.emotion-19 {
  fill: black;
  width: 1rem;
  height: 1rem;
}

.emotion-19 path {
  fill: black;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      aria-label="Top Application Banner"
      className="emotion-1"
      role="banner"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
          data-testid="menu-handler"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <span
              className="emotion-5"
            />
          </span>
        </div>
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <strong>
              LOGO
            </strong>
            PLACEHOLDER
          </div>
        </div>
      </div>
      <div
        className="emotion-8"
      />
      <div
        className="emotion-9"
      >
        <div
          role="button"
        >
          <div
            className="emotion-10"
            data-testid="userMenu"
          >
            <button
              className="emotion-11"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-12"
              >
                <span
                  className="emotion-13"
                >
                  <div
                    className="emotion-14"
                  >
                    <img
                      src="https://mui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  className="emotion-15"
                >
                  <span>
                    <span
                      className="emotion-16"
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-13"
                >
                  <span
                    className="emotion-4"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-19"
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
